--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -58,6 +58,7 @@ Last Update: Jan 13, 2018
 @import url(/TunaMusic/resources/css/font-awesome.min.css);
 @import url(/TunaMusic/resources/css/style.css);
 /* :: 1.0 Reboot CSS */
+
 * {
   margin: 0;
   padding: 0; }
@@ -2247,3 +2248,21 @@ input:focus {
     font-size: 14px; }
 
 /*# sourceMappingURL=style.css.map */
+
+/*로그아웃, 마이페이지 드롭다운*/
+#user-icon li ul {
+		background: rgb(109,109,109);
+		display:none;  
+		height:auto;
+		padding-bottom:10px;
+		margin:0px;
+		border:0px;
+		position:absolute;
+		width:120px;
+		z-index:200;
+	}
+	
+#user-icon li:hover ul {
+	display:block;   
+}
+/*드롭다운 END*/
